--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
         "@reduxjs/toolkit": "^1.7.1",
         "@rollup/plugin-node-resolve": "^15.2.3",
         "axios": "1.6.8",
+        "chart.js": "^4.4.2",
+        "chartjs-plugin-datalabels": "^2.2.0",
         "react": "^17.0.2",
+        "react-chartjs-2": "^5.2.0",
         "react-dom": "^17.0.2",
-        "react-gauge-chart": "^0.4.0",
         "react-redux": "^7.2.6",
         "react-router": "^6.2.1",
         "react-router-dom": "^6.2.1",
